--- a/static/sass/_pattern_navigation.scss
+++ b/static/sass/_pattern_navigation.scss
@@ -421,3 +421,14 @@
     }
   }
 }
+
+@mixin ubuntu-p-nojs-navigation {
+  .nojs-meganav {
+    background: #262626;
+
+    h2 {
+      color: #f7f7f7;
+      padding-left: 1.5rem;
+    }
+  }
+}
