Fix search not working on nojs mobile view

--- a/static/sass/_pattern_navigation.scss
+++ b/static/sass/_pattern_navigation.scss
@@ -22,6 +22,8 @@
 
   .p-navigation--sliding:not(.js-enabled) {
     .p-navigation__item--dropdown-toggle>.p-navigation__link {
+      padding-right: 1rem;
+
       &::after {
         content: none;
       }
